--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   json_serializable: ^6.6.1
   get: ^4.6.5
   cloud_firestore: ^4.14.0
+  google_sign_in: ^6.1.4
+  weather: ^3.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
