--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-lib/firebase_options.dart
-lib/config/keys.dart
+/lib/firebase_options.dart
+/lib/config/keys.dart
