--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_sign_in: ^6.1.4
   weather: ^3.0.0
   intl: ^0.18.1
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
